# omnibenchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  conda-test-environment.yml  constraints.txt  index.html  mac-test-environment.yml  omni-environment.yml  pin-reqs  pixi.toml  pyproject.toml  pyrightconfig.json  pyrightconfig.strict.json  pytest.ini  requirements.txt  sitemap.xml  test-environment.yml  tox.ini  ty.toml
.github/: pull_request_template.md
.github/workflows/: cffbump.yaml  code-style.yml  coverage.yml  e2e-tests.yml  manual.yml  mkdocs.yml  pipeline.yml  pipeline.yml.disabled  pixi.yml  software_cli_tests.yml  software_conda_tests.yml  software_eb_tests.yml  software_tests.yml  software_tests_linux.yml  software_tests_mac.yml  tests.yml  tests_software.yml
bundles/: data_63b7b36.bundle  dummymodule_4ff8427.bundle  method_8f2f835.bundle  metric_579c643.bundle  process_706edb9.bundle
data/templates/: main.R  main.py  main_explicit.R  main_explicit.py  main_explicit.sh  main_implicit.R  main_implicit.py  main_implicit.sh
docs/: .gitlab-ci.yml  CONTRIBUTING.md  README.md  RELEASING.md  RESOURCE_ALLOCATION.md  mkdocs.yml  refs.bib  requirements.txt  templategen.py
docs/design/: 000-template.md  001-module-metadata.md  002-module-artifact-validation.md  003-storage.md  004-yaml-specification.md  005-run-module.md  006-telemetry.md  007-output-layout.md  008-filtering.md  008-named-outputs.md  README.md
docs/docs/: news.md  tutorial.md
docs/src/: architecture.md  bench-reference.md  config.md  examples.md  howto.md  index.md  news.md  philosophy.md  reference.md  spec-reference.md  team.md  tutorial.md
docs/templates/: benchmark_template.yaml
examples/: resource_allocation_example.yml  storage_usage.py
howto/: index.html
news/: index.html
omni/: __init__.py  benchmark.py  cli.py  data.py  datasets.py  io.py  module.py  output.py  sync.py  utils.py
omni/benchmark/: __init__.py  benchmark.py  benchmark_node.py  constants.py  converter.py  dag.py  params.py  template_repo.py
omni/cli/: benchmark.py  click.py  docker.py  io.py  main.py  run.py  soft.py  template.py  validate.py
omni/io/: MinIOStorage.py  README.md  RemoteStorage.py  S3Storage.py  S3config.py  S3versioning.py  SwiftStorage.py  archive.py  code.py  exception.py  files.py  utils.py  versioning.py
omni/model/: module.py
omni/software/: README.md  Snakefile  common.py  conda.py  conda_backend.py  easybuild.py  easybuild.sh  easybuild_backend.py  modules.sh  play.sh  software.py
omni/template/: repo.py
omni/workflow/: __init__.py  formatter.py  workflow.py
omni_py/: benchmark.py  config.py  datasets.py  sync.py
omnibenchmark/: __init__.py  config.py  constants.py  filter.py  formatting.py  logging.py  sync.py  utils.py
omnibenchmark/archive/: __init__.py  archive.py  components.py
omnibenchmark/backend/: __init__.py  _manifest.py  _metadata.py  _metric_collector.py  _snakemake_debug.py  _snakemake_podman.py  cache.py  collector_resolution.py  manifest.py  resolver.py  snakemake.py  snakemake_gen.py
omnibenchmark/benchmark/: __init__.py  _dag_builder.py  _dot.py  _graph.py  _mermaid.py  _node.py  _paths.py  benchmark.py  benchmark_node.py  cite.py  constants.py  converter.py  dag.py  dashboard.py  execution_path.py  metadata.py  params.py  prefetch.py  repository.py  repository_utils.py  symlinks.py  validate.py  validation_core.py  validator.py
omnibenchmark/cli/: __init__.py  archive.py  benchmark.py  cache.py  cite.py  collect.py  create.py  dashboard.py  debug.py  describe.py  error_formatting.py  export.py  io.py  main.py  progress.py  remote.py  run.py  soft.py  status.py  storage.py  validate.py
omnibenchmark/core/: __init__.py  _graph.py  _mc_output.py  _mermaid.py  _node.py  _paths.py  cite.py  execution.py  execution_path.py  interfaces.py  prefetch.py  validate.py  validators.py
omnibenchmark/dag/: README.md  __init__.py  simple_dag.py
omnibenchmark/git/: __init__.py  cache.py  cache.py.bak  clone.py  clone_legacy.py  prefetch.py
omnibenchmark/io/: MinIOStorage.py  README.md  RemoteStorage.py  S3config.py  S3versioning.py  archive.py  code.py  files.py  hash.py  storage.py  tree.py  utils.py  versioning.py
omnibenchmark/model/: __init__.py  _merge.py  _parsing.py  benchmark.py  module.py  params.py  repo.py  resolved.py  validation.py
omnibenchmark/remote/: MinIOStorage.py  README.md  RemoteStorage.py  S3Storage.py  S3config.py  S3versioning.py  __init__.py  archive.py  code.py  exception.py  files.py  hash.py  service.py  sizeof.py  storage.py  versioning.py
omnibenchmark/scratch/: REFACTOR
omnibenchmark/software/: README.md  common.py  conda_backend.py  easybuild_backend.py
omnibenchmark/storage/: __init__.py  base.py  expected.py
omnibenchmark/telemetry/: README.md  __init__.py  emitter.py  events.py  relay.py  run_dashboard.sh  spans.py
omnibenchmark/validators/: __init__.py  engine.py
omnibenchmark/versioning/: __init__.py  exceptions.py  git.py  manager.py  version.py
omnibenchmark/workflow/: workflow.py
philosophy/: index.html
reference/: index.html
reports/: junit.xml
scratch/: validation-todo.md
scripts/: create-micromamba-env.sh  create-test-env.sh  gen_architecture.py  run-software-tests-in-docker.sh  run_aspire_container.sh  run_dashboard.sh  run_version_update.sh  scalability-multicore.py  telemetry-relay.py  typecheck_strict.py  update_omnibenchmark_version.py
search/: search_index.json
team/: index.html
tests/: conftest.py  dummy_cli_test.py  dummy_test.py  example_benchmark_definition.yaml  fixtures.py  git_bundle.py  test_architecture.py  test_constants.py  test_filter.py  test_git.py  test_utils.py
tests/archive/: __init__.py  test_archive_basics.py  test_components_behavior.py  test_compression_levels.py  test_output_file.py  test_output_file_examples.py
tests/backend/: test_collector_resolution.py  test_manifest.py  test_metadata.py  (+7 more)
tutorial/: index.html
(+341 files in other folders)
